# code-edith

./: .gitignore  CodeFile  CodeFile.txt  LICENSE  README.md  pyproject.toml
.assets/: edith-asi-art.txt  edith-asi-unicode.txt
src/: index.py
src/config/: system.txt  tools.json
src/engine/: chat.py  client.py  tool_handler.py
src/engine/tools/: read_file.py  shell_command.py  web_search.py  write_file.py
src/helper/: animation.py  banner.py  input.py  print_md.py
src/utils/: clipboard.py  command_handler.py  console.py  env.py  history.py  signals.py  trust_folder.py
src/utils/commands/: clear.py  copy.py  exit.py  help.py  reset.py
